# C-Project-Template

./: CMakeLists.txt  conanfile.py
src/Executable/: CMakeLists.txt
src/Executable/src/: main.cpp
